src/bcheck-api-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bcheck-ns
  name: bcheck-api-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
spec:
  ports:
    - port: 7777
      targetPort: 7777
      protocol: TCP
  type: LoadBalancer
  selector:
    app: bcheck-api
