src/bcheck-auth-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bcheck-ns
  name: bcheck-auth-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
spec:
  ports:
    - port: 7070
      targetPort: 7070
      protocol: TCP
  type: LoadBalancer
  selector:
    app: bcheck-auth
