src/bcheck-gateway-alb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bcheck-ns
  name: bcheck-gateway-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app: bcheck-gateway-api
