src/bcheck-gateway-ts-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bcheck-ns
  name: bcheck-gateway-ts-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: LoadBalancer
  selector:
    app: bcheck-gateway-ts
