src/bcheck-web-alb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bcheck-ns
  name: bcheck-web-alb
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthy
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: bcheck-web
